--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ### CORS资源共享设置
 ## 如果你需要配置, 请取消下面的注释并设置具体的域名
-# CORS_ALLOW_ORIGIN = "https://music.xeone3hierarch.top"
+CORS_ALLOW_ORIGIN = "https://music.xeone3hierarch.top"
 
 ### 代理设置
 ## 启用反向代理
